# recurrent-pretraining

./: .gitignore  LICENSE  README.md  finetuning_simple_example.py  launch_frontier.py  pyproject.toml  train.py
evaluate_raven/: checkpoint_to_hf_converter.py  eval_alternate_loops.py  gms8k_long_cot.yaml  hf_eval_adaptive_compute.py  local_lm_eval.py  quick_chat_rec_compare.py  quick_checkpoint_eval.py  record_steps_in_bench.py  saturation_eval_dist.py
evaluate_raven/misc_benchmark_variants/: README.md  eval_alternate_loops.py  gsm8K_issue_16.yaml  gsm8k_passk.yaml  hf_eval_adaptive_compute.py  open_openbookqa.yaml  pass_at_k_utils.py
examples/: inference_demo.ipynb  spec_decoding_example.ipynb  trajectory_analysis.ipynb
launch_configs/: frontier_baseline_256_nodes.yaml  frontier_nebel_512_nodes.yaml  recurrent.yaml
recpre/: __init__.py  checkpoint_patch.py  config_dynamic.py  data_loading_utils.py  data_scheduler_utils.py  huggingface_dataset.py  init.py  legacy_modeling_file.py  misc.py  model_dynamic.py  model_registry.py  monitor.py  norms.py  ops.py  optim.py  raven_config_minimal.json  raven_config_minimal.py  raven_modeling_minimal.py  settings.py  soap.py  tokenizer.py  utils.py
recpre/attention_backends/: __init__.py  amd.py  binBlk.py  cuda_flash_attention.py  flex_attentions.py  interface.py  mosaic.py  openai.py  pytorch.py  testing.py  triton_kernels_seq_par.py
scripts/: classify_loops.py  compare_tokenizers.py  data_processing_pipeline.py  download_stream_to_local_copy.py  instructionsets.yaml  parquet_to_parquet_dedup.py  parquet_to_parquet_sentence_dedup.py  parquet_to_parquet_shuffler.py  parquet_to_parquet_tokenizer.py  parquet_token_counter.py  process_token_counts.py  scalable_data_download.py  softwareheritage.yaml  sources.yaml  target_domain_sets.yaml  the_stack_downloader.py  tokenizer_generation.py
vllm/: README.md  chat_repl.py  generation_config.json  raven_vllm.py  setup.py
